@@ -14,6 +14,7 @@
         <platform>all</platform>
         <news>
 [fix] sort by viewers for followed live channels, restoring previous behavior
+[fix] menu settings not taking effect
         </news>
         <assets>
             <icon>icon.png</icon>
