@@ -34,4 +34,4 @@ def route():
     context_menu.extend(menu_items.change_sort_by('clips'))
     kodi.create_item({'label': i18n('clips'), 'path': {'mode': MODES.FOLLOWED, 'content': 'clips'}, 'context_menu': context_menu,
                       'info': {'plot': '%s - %s' % (i18n('following'), i18n('clips'))}})
-    kodi.end_of_directory(cache_to_disc=True)
+    kodi.end_of_directory(cache_to_disc=False)
